[tool.poetry]
name = "langchain-poetry-project"
version = "0.1.0"
description = ""
authors = ["Shahzaib Noor <shahzaibnoorcs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.52.2"
langchain = "^0.3.5"
tiktoken = "^0.8.0"
ipython = "^8.29.0"
docarray = "^0.40.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
rich = "^13.9.4"
huggingface-hub = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
